intermediate revision - updated utilities